--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,91 +1,114 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+/* 
+color: #888; - paragraf color
+color: #999; - Date color 
+*/
+
+.mainBarContent {
+  display:flex;
+  justify-content: space-around;
   align-items: center;
+  padding: 20px 0;
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0 0 1rem;
-  line-height: 1.15;
-  font-size: 3.6rem;
-}
-
-.title {
-  text-align: center;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.grid {
+.mainBarContentRightList {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
-  max-width: 800px;
-  margin-top: 3rem;
+  flex-direction: row;
+  ;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+.form {
+  padding-left: 40px;
+  height: 38px;
+  font-size: 14px;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
+.formControl {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  background-color: #fff;
+  border-color: #000;
+  border-radius: 30px;
+  font-weight: 400;
   line-height: 1.5;
+  border: 1px solid #ced4da;
+
 }
 
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+.firstContent, .secondContent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  padding: 30px 10% 20px 10%;
   }
-}
+
+  .firstTitle h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    padding-top: 48px;
+  }
+
+  .secondTitle h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-top: 120px;
+  }
+
+  .firstContentBox img {
+    border-radius: 8px;
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+
+  }
+
+  .firstContentBoxCategory {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+  }
+  .firstContentBoxCategoryBlog p  {
+    color: #222;
+    font-weight: 600;
+    padding-right: 5px;
+  }
+
+  .firstContentBoxCategoryDate p {
+    color: #999;
+    font-weight: 400;
+    font-size: 14px;
+  }
+
+  .firstContentBox h2 {
+    margin: 12px 0;
+    line-height: normal;
+  }
+  
+  .firstContentBox p {
+    color: #888;
+  }
+
+  .firstContentBoxAuthor {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+  }
+
+  .firstContentBoxAuthor img {
+    margin-right: 10px;
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    vertical-align: middle;
+  }
+  .firstContentBoxAuthorName {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
