--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@ color: #999; - Date color
 */
 
 .mainBarContent {
-  display:flex;
+  display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 20px 0;
@@ -15,7 +15,6 @@ color: #999; - Date color
 .mainBarContentRightList {
   display: flex;
   flex-direction: row;
-  ;
 }
 
 .form {
@@ -34,81 +33,302 @@ color: #999; - Date color
   font-weight: 400;
   line-height: 1.5;
   border: 1px solid #ced4da;
-
 }
 
-.firstContent, .secondContent {
+.firstContent,
+.secondContent {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 40px;
   grid-row-gap: 40px;
   padding: 30px 15% 20px 15%;
+}
+
+.firstTitle h1 {
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+  padding-top: 48px;
+  margin-bottom: 60px;
+}
+
+.secondTitle h1 {
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+  margin: 60px 0;
+}
+
+.firstContentBox img {
+  border-radius: 8px;
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+
+.firstContentBoxCategory {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+.firstContentBoxCategoryBlog p {
+  color: #222;
+  font-weight: 600;
+  padding-right: 5px;
+}
+
+.firstContentBoxCategoryDate p {
+  color: #999;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.firstContentBox h2 {
+  margin: 12px 0;
+  line-height: normal;
+}
+
+.firstContentBox p {
+  color: #888;
+}
+
+.firstContentBoxAuthor {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+
+.firstContentBoxAuthor img {
+  margin-right: 10px;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  vertical-align: middle;
+}
+.firstContentBoxAuthorName {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  gap: 20px;
+  background-color: #f8f9fa;
+}
+
+.subscribeTitle {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.subscribeForm {
+  display: flex;
+  flex-direction: row;
+}
+
+.subscribeForm input {
+  width: 100%;
+  height: 50px;
+  border-color: #ccc;
+  border-radius: 7px;
+  margin: 0 20px;
+  height: 50px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+}
+
+.subscribeForm button {
+  background-color: #f79918;
+  color: #fff;
+  border: 2px solid transparent;
+  padding: 12px 20px;
+  border-radius: 30px;
+  font-size: 10px;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
+.firstCarousel {
+  max-width: 50rem;
+  margin-inline: auto;
+  padding-inline: 1rem;
+}
+
+.firstCarousel img {
+  max-width: 100%;
+  display: block;
+}
+
+.accordion {
+  --_button-size: 3rem;
+  --_panel-padding: 0.75rem;
+  --_panel-gap: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media(min-width: 45em) {
+  .accordion {
+    flex-direction: row;
+    height: 30rem;
+  }
+}
+
+.accordionPanel {
+  position: relative;
+  isolation: isolate;
+  flex-basis: calc((var(--_panel-padding) * 2) + var(--_button-size));
+  padding: var(--_panel-padding);
+  padding-right: calc(var(--_panel-padding) * 4);
+  overflow: hidden;
+  border-radius: calc(((var(--_panel-padding) * 2) + var(--_button-size)) / 2);
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .accordionPanel {
+    transition: flex-basis 500ms, flex-grow 500ms;
+  }
+}
+/* colors below not working */
+.accordionPanel:nth-child(1) {
+  --_panel-color: hsl(160, 70%, 50%);
+}
+.accordionPanel:nth-child(2) {
+  --_panel-color: hsl(184, 70%, 50%);
+}
+.accordionPanel:nth-child(3) {
+  --_panel-color: hsl(220, 70%, 50%);
+}
+.accordionPanel:nth-child(4) {
+  --_panel-color: hsl(350, 70%, 50%);
+}
+.accordionPanel:nth-child(5) {
+  --_panel-color: hsl(20, 70%, 50%);
+}
+
+.accordionPanel:has([aria-expanded="true"]) {
+  flex-basis: clamp(15rem, 40vh, 20rem);
+  flex-grow: 1;
+}
+
+.accordionContent > p {
+  transform: translateY(2rem);
+  opacity: 0;
+
+  margin-left: calc(var(--_button-size) + var(--_panel-gap));
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .accordionContent > p {
+    transition: transform 500ms 500ms, opacity 500ms 500ms;
+  }
+}
+
+.accordionPanel:has([aria-expanded="true"]) p {
+  transform: translateY(0);
+  opacity: 1;
+  transition: transform 500ms, opacity 500ms;
+}
+
+.accordionTitle {
+  font-size: 1.5rem;
+  font-weight: 700;
+
+  position: relative;
+  isolation: isolate;
+}
+
+@media (max-width: 44.999em) {
+  .accordionTitle::after {
+    content: "";
+    position: absolute;
+    left: calc((var(--_panel-gap) + var(--_button-size)) * -1);
+    width: calc((100% + var(--_button-size)) * 2);
+    height: var(--_button-size);
+    background: hsl(0, 0%, 0% / 0.5);
+    z-index: -1;
+    border-radius: 100vw;
+  }
+}
+
+.accordionImage {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+
+  transition: filter 500ms;
+}
+
+.accordionPanel:has([aria-expanded="true"]) .accordionImage {
+  filter: brightness(0.5);
+}
+
+.accordionTrigger {
+  display: flex;
+  align-items: center;
+  gap: var(--_panel-gap);
+  flex-direction: row-reverse;
+  background: transparent;
+  border: 0;
+  border: 0;
+  padding: 0;
+}
+
+.accordionIcon {
+  fill: var(--_panel-color);
+  background: hsl(0, 0%, 0% / 0.55);
+  width: var(--_button-size);
+  aspect-ratio: 1 / 1;
+  padding: 0.75rem;
+  border-radius: 50%;
+  z-index: 10;
+}
+
+/* 
+  .firstCarouselBox {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 1fr;
+      grid-column-gap: 0px;
+      grid-row-gap: 0px;
+      padding: 0 15%;
+     
   }
 
-  .firstTitle h1 {
-    text-align: center;
-    font-size: 40px;
-    font-weight: 700;
-    padding-top: 48px;
-  }
-
-  .secondTitle h1 {
-    text-align: center;
-    font-size: 40px;
-    font-weight: 700;
-    margin-top: 120px;
-  }
-
-  .firstContentBox img {
+  .firstCarouselBox img {
     border-radius: 8px;
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
-
-  }
-
-  .firstContentBoxCategory {
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
-  }
-  .firstContentBoxCategoryBlog p  {
-    color: #222;
-    font-weight: 600;
-    padding-right: 5px;
-  }
-
-  .firstContentBoxCategoryDate p {
-    color: #999;
-    font-weight: 400;
-    font-size: 14px;
-  }
-
-  .firstContentBox h2 {
-    margin: 12px 0;
-    line-height: normal;
-  }
-  
-  .firstContentBox p {
-    color: #888;
-  }
-
-  .firstContentBoxAuthor {
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
-  }
-
-  .firstContentBoxAuthor img {
-    margin-right: 10px;
-    border-radius: 50%;
-    width: 45px;
-    height: 45px;
+    height: 75%;
     vertical-align: middle;
   }
-  .firstContentBoxAuthorName {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+  .carouselContent {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    margin: 8% 0 0 -15%;
   }
+
+  .carouselContent h2 {
+    font-family: "Poppins", sans-serif;
+    line-height: 1.2;
+    font-size: 40px;
+    font-weight: 700;
+  } */
